Попытка возврата к проекту :)

--- a/trunk/doc/config/conf.node.conf
+++ b/trunk/doc/config/conf.node.conf
@@ -8,7 +8,7 @@ node.logger
       syslog=true;
     }
     
-    filename="/tmp/mon.node.log";
+    filename="/tmp/mon/log.node.log";
   }
-node.destination.console=true;
-node.logger.max_priority=2;
+node.logger.destination.console=true;
+node.logger.max_priority=3;
