Много делал. В частности работал с сокетами, начал разруливать легкое создание сенсоров, курил cmake, положил начало протоколу...

--- a/trunk/sensors/cpu/CMakeLists.txt
+++ b/trunk/sensors/cpu/CMakeLists.txt
@@ -3,7 +3,8 @@ PROJECT(mon-sensor-cpu)
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 SET( EXECUTABLE_NAME cpu )
 
-include (${CMAKE_INSTALL_PREFIX}/include/mon/CMakeDebug.txt)
+include (${CMAKE_INSTALL_PREFIX}/include/mon/CMakeDebug.cmake)
+include (${CMAKE_INSTALL_PREFIX}/include/mon/CMakeSensor.cmake)
 
 MESSAGE ( STATUS "---------- Configuring mon-sensor-cpu ----------" )
 
@@ -11,15 +12,6 @@ SET(mon-sensor-cpu-sources
 	src/main.cpp
 )
 
-SET(mon-sensor-cpu-headers
-)
+SET(mon-sensor-cpu-headers src/main.cpp)
 
-add_library( ${EXECUTABLE_NAME} SHARED
-	     ${mon-sensor-cpu-sources}
-	     ${mon-sensor-cpu-headers} )
-
-target_link_libraries( ${EXECUTABLE_NAME} )
-
-INSTALL(TARGETS ${EXECUTABLE_NAME}
-        LIBRARY DESTINATION lib/mon/sensors
-)
+add_sensor(${mon-sensor-cpu-sources} ${mon-sensor-cpu-headers} src)
