--- a/trunk/build
+++ b/trunk/build
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 # %Id%
-
+debug_off=${1:-"ON"}
 build_path="/tmp/mon/build"
 install_path="/tmp/mon/package"
 current_path=$PWD
@@ -26,7 +26,7 @@ function build()
   object_path="$current_path/$path"
   mkdir -p $object_build_path
   cd $object_build_path
-  run_cmd "CMake" "cmake -DCMAKE_INSTALL_PREFIX='$install_path' -DBUILD_SERVER=ON -DBUILD_DEBUG=ON $object_path"
+  run_cmd "CMake" "cmake -DCMAKE_INSTALL_PREFIX='$install_path' -DBUILD_SERVER=ON -DBUILD_DEBUG=$debug_off $object_path"
   run_cmd "make" "make -j$build_threads"
   run_cmd "install" "make install"
   cd $build_path
