--- a/trunk/sensors/memory/CMakeLists.txt
+++ b/trunk/sensors/memory/CMakeLists.txt
@@ -3,7 +3,8 @@ PROJECT(mon-sensor-memory)
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 SET( EXECUTABLE_NAME memory )
 
-include (${CMAKE_INSTALL_PREFIX}/include/mon/CMakeDebug.txt)
+include (${CMAKE_INSTALL_PREFIX}/include/mon/CMakeDebug.cmake)
+include (${CMAKE_INSTALL_PREFIX}/include/mon/CMakeSensor.cmake)
 
 MESSAGE ( STATUS "---------- Configuring mon-sensor-memory ----------" )
 
@@ -11,15 +12,6 @@ SET(mon-sensor-memory-sources
 	src/main.cpp
 )
 
-SET(mon-sensor-memory-headers
-)
+SET(mon-sensor-memory-headers  src/main.cpp)
 
-add_library( ${EXECUTABLE_NAME} SHARED
-	     ${mon-sensor-memory-sources}
-	     ${mon-sensor-memory-headers} )
-
-target_link_libraries( ${EXECUTABLE_NAME} )
-
-INSTALL(TARGETS ${EXECUTABLE_NAME}
-        LIBRARY DESTINATION lib/mon/sensors
-)
+add_sensor(${mon-sensor-memory-sources} ${mon-sensor-memory-headers} src)
