--- a/trunk/sensors/cpu/CMakeLists.txt
+++ b/trunk/sensors/cpu/CMakeLists.txt
@@ -3,15 +3,15 @@ PROJECT(mon-sensor-cpu)
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 SET( EXECUTABLE_NAME cpu )
 
-include (${CMAKE_INSTALL_PREFIX}/include/mon/CMakeDebug.cmake)
 include (${CMAKE_INSTALL_PREFIX}/include/mon/CMakeSensor.cmake)
 
-MESSAGE ( STATUS "---------- Configuring mon-sensor-cpu ----------" )
+SET(mon-sensor-memory-sources
+    src/main.cpp)
 
-SET(mon-sensor-cpu-sources
-	src/main.cpp
-)
+SET(mon-sensor-memory-headers
+    src/main.cpp)
 
-SET(mon-sensor-cpu-headers src/main.cpp)
+SET(include_dirs
+    src)
 
-add_sensor(${mon-sensor-cpu-sources} ${mon-sensor-cpu-headers} src)
+add_sensor(${mon-sensor-memory-sources} ${mon-sensor-memory-headers} ${include_dirs})
