--- a/trunk/doc/config/debug.collector.conf
+++ b/trunk/doc/config/debug.collector.conf
@@ -1,4 +1,4 @@
-server.logger
+collector.logger
   {
     destination
     {
@@ -6,10 +6,10 @@ server.logger
       file=true;
       syslog=true;
     }
-    filename="/tmp/mon/log.server.log";
+    filename="/tmp/mon/log.collector.log";
     max_priority=3;
   }
-server.nodes
+collector.nodes
   {
     localhost
     {
