--- a/trunk/doc/config/debug.node.conf
+++ b/trunk/doc/config/debug.node.conf
@@ -1,14 +1,18 @@
 node.network.listen.port=4848;
 node.logger
   {
-    
     destination
     {
       file=true;
       syslog=true;
     }
-    
     filename="/tmp/mon/log.node.log";
   }
 node.logger.destination.console=true;
 node.logger.max_priority=3;
+node.password='qwerty';
+node.sensors
+  {
+    cpu {}
+    memory {}
+  }
