--- a/trunk/doc/config/debug.collector.conf
+++ b/trunk/doc/config/debug.collector.conf
@@ -15,12 +15,7 @@ collector.nodes
     {
       connection.host="localhost";
       connection.port=4848;
+      connection.timeout=3;
+      password='qwerty';
     }
-    gate
-    {
-      connection.host="192.168.1.1";
-      connection.port=4848;
-      connection.timeout=120;
-    }
-    #storage.connection.host="storage.bng.local";
   }
