+Поддержка include в конфигурационных файлах. Исправлен косяк с чтением конфига для сенсора

--- a/trunk/doc/config/debug.node.conf
+++ b/trunk/doc/config/debug.node.conf
@@ -1,18 +1,11 @@
 node.network.listen.port=4848;
-node.logger
-  {
-    destination
-    {
-      file=true;
-      syslog=true;
-    }
-    filename="/tmp/mon/log.node.log";
-  }
-node.logger.destination.console=true;
-node.logger.max_priority=3;
 node.password='qwerty';
-node.sensors
+node
+{
+  include:"/tmp/mon/node.logger.conf";
+  sensors
   {
-    cpu {}
-    memory {}
+    include: "/tmp/mon/node.cpu.conf";
+    include: "/tmp/mon/node.memory.conf";
   }
+}
