Расщепление конфига коллектора

--- a/trunk/doc/config/debug.collector.conf
+++ b/trunk/doc/config/debug.collector.conf
@@ -13,9 +13,6 @@ collector.nodes
   {
     localhost
     {
-      connection.host="localhost";
-      connection.port=4848;
-      connection.timeout=3;
-      password='qwerty';
+	include: "collector.node.localhost.conf";
     }
   }
