--- a/trunk/doc/config/debug.collector.conf
+++ b/trunk/doc/config/debug.collector.conf
@@ -13,6 +13,6 @@ collector.nodes
   {
     localhost
     {
-	include: "collector.node.localhost.conf";
+	include: "/tmp/mon/collector.node.localhost.conf";
     }
   }
