Подчистка репозитория, переделка путей сборки

--- a/trunk/doc/config/collector.conf
+++ b/trunk/doc/config/collector.conf
@@ -6,13 +6,13 @@ collector.logger
       file=true;
       syslog=true;
     }
-    filename="/tmp/mon/log.collector.log";
+    filename="/tmp/mon/root/var/log/collector.log";
     max_priority=3;
   }
 collector.nodes
   {
     localhost
     {
-	include: "/tmp/mon/collector.node.localhost.conf";
+	include: "/tmp/mon/root/etc/mon/collector.node.localhost.conf";
     }
   }
