--- a/trunk/doc/config/node.logger.conf
+++ b/trunk/doc/config/node.logger.conf
@@ -5,7 +5,7 @@ logger
       file=true;
       syslog=true;
     }
-    filename="/tmp/mon/log.node.log";
+    filename="/tmp/mon/root/var/log/node.log";
 }
 logger.destination.console=true;
 logger.max_priority=3;
